[package]
name = "buy_low"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "~4", features = ["derive"] }
toml = "~0.8"
dotenv = "~0.15"
reqwest = { version = "~0.12", features = ["blocking","json"] }
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
postgres = { version = "~0.19", optional = true }
postgres-types = { version = "~0.2", features = ["derive"] , optional = true }
tabled = "0.15.0"

[features]
use_postgres = ["postgres", "postgres-types"]
